@@ -1,7 +1,7 @@
 # vim: ft=spec sw=4 et tw=78 com=b\:#,fb\:- fo+=tcqlorn nocin nosi
 # =============================================================================
 # 
-# @(#) $RCSfile: strnsl.spec.in,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/06/20 09:27:50 $
+# @(#) $RCSfile: strnsl.spec.in,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/06/22 01:52:20 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -46,7 +46,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/06/20 09:27:50 $ by $Author: brian $
+# Last Modified $Date: 2007/06/22 01:52:20 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -101,6 +101,8 @@
 %global infofiles   %{base}
 #global initfiles   %{base}
 %global conffiles   netconfig
+%global netconfig   %{base}
+#global sock2path   %{base}
 
 %{expand: %%global without_ko_modules %(echo %{_kversion} | sed -e 's|^2\.[56]\..*$|0|;s|^2\.4\..*$|1|')}
 %{expand: %%global have_preloads    %{?preloads: 1}%{!?preloads: 0}}
@@ -110,6 +112,8 @@
 %{expand: %%global have_infofiles   %{?infofiles:1}%{!?infofiles:0}}
 %{expand: %%global have_initscripts %{?initfiles:1}%{!?initfiles:0}}
 %{expand: %%global have_configfiles %{?conffiles:1}%{!?conffiles:0}}
+%{expand: %%global have_netconfig   %{?netconfig:1}%{!?netconfig:0}}
+%{expand: %%global have_sock2path   %{?sock2path:1}%{!?sock2path:0}}
 
 %if %{without_ko_modules}
 # assume devs for older kernels
@@ -1707,6 +1711,32 @@ if [ $1 = 1 ] ; then : # fresh install
         rm -f -- $prel_new
     fi
 %endif
+%if %{have_netconfig}
+    # At the end of a fresh install we need to rebuild the netconfig database.
+    t="%_sysconfdir/netconfig"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
+%endif
+%if %{have_sock2path}
+    # At the end of a fresh install we need to rebuild the sock2path database.
+    t="%_sysconfdir/sock2path"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
+%endif
 fi
 if [ $1 = 2 ] ; then : # upgrade
 %if %{have_oldmods}
@@ -1744,6 +1774,32 @@ if [ $1 = 2 ] ; then : # upgrade
         cp -f -b --suffix=.rpmsave -- $prel_new $prel_old
         rm -f -- $prel_new
     fi
+%endif
+%if %{have_netconfig}
+    # At the end of an upgrade we need to rebuild the netconfig database.
+    t="%_sysconfdir/netconfig"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
+%endif
+%if %{have_sock2path}
+    # At the end of an upgrade we need to rebuild the sock2path database.
+    t="%_sysconfdir/sock2path"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
 %endif
 %if %{have_initscripts}
     # This is the end of a fresh install, add init scripts if we can
@@ -1795,6 +1851,32 @@ if [ $1 = 0 ] ; then : # final removal
         cp -f -b --suffix=.rpmsave -- $prel_new $prel_old
         rm -f -- $prel_new
     fi
+%endif
+%if %{have_netconfig}
+    # After going away altogether, we want to rebuild the netconfig database.
+    t="%_sysconfdir/netconfig"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
+%endif
+%if %{have_sock2path}
+    # After going away altogether, we want to rebuild the sock2path database.
+    t="%_sysconfdir/sock2path"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
 %endif
 %if %{have_initscripts}
     # Uninstalling for good, remove init scripts if we can
@@ -1868,6 +1950,32 @@ b loop' $prel_new > $prel_tmp
         rm -f -- $prel_new
     fi
 %endif
+%if %{have_netconfig}
+    # After going doing an upgrade we want to rebuild the netconfig database.
+    t="%_sysconfdir/netconfig"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
+%endif
+%if %{have_sock2path}
+    # After going doing an upgrade we want to rebuild the sock2path database.
+    t="%_sysconfdir/sock2path"
+    cp -f -b --suffix=.rpmsave -- /dev/null $t
+    for f in "${t}.d/*" ; do
+        if [ -f $f ] ; then
+            case $f in
+                (*.rpmsave|*.rpmnew) ;;
+                (*) sed -e '/^[[:space:]]*##/d;/^[[:space:]]*$/d' $f >> $t ;;
+            esac
+        fi
+    done
+%endif
 fi
 
 %if %{FILES_init}
@@ -1875,6 +1983,8 @@ fi
 # ---------------------------------------------------------------------------
 %defattr(-,root,root)
 %{?conffiles:%config(noreplace) %{_sysconfdir}/%{conffiles}}
+%{?netconfig:%config(noreplace) %{_sysconfdir}/netconfig.d/%{netconfig}}
+%{?sock2path:%config(noreplace) %{_sysconfdir}/sock2path.d/%{sock2path}}
 %config(noreplace) %{_configdir}/*
 %config(noreplace) %{_modutildir}/*
 %{_initrddir}/../*
@@ -1885,6 +1995,8 @@ fi
 # ---------------------------------------------------------------------------
 %defattr(-,root,root)
 %{?conffiles:%config(noreplace) %{_sysconfdir}/%{conffiles}}
+%{?netconfig:%config(noreplace) %{_sysconfdir}/netconfig.d/%{netconfig}}
+%{?sock2path:%config(noreplace) %{_sysconfdir}/sock2path.d/%{sock2path}}
 %config(noreplace) %{_configdir}/*
 %{_initrddir}/../*
 %endif
@@ -1894,6 +2006,8 @@ fi
 # ---------------------------------------------------------------------------
 %defattr(-,root,root)
 %{?conffiles:%config(noreplace) %{_sysconfdir}/%{conffiles}}
+%{?netconfig:%config(noreplace) %{_sysconfdir}/netconfig.d/%{netconfig}}
+%{?sock2path:%config(noreplace) %{_sysconfdir}/sock2path.d/%{sock2path}}
 %{?modules:%config(noreplace) %{_modutildir}/*}
 %endif
 
@@ -1902,15 +2016,21 @@ fi
 # ---------------------------------------------------------------------------
 %defattr(-,root,root)
 %{?conffiles:%config(noreplace) %{_sysconfdir}/%{conffiles}}
+%{?netconfig:%config(noreplace) %{_sysconfdir}/netconfig.d/%{netconfig}}
+%{?sock2path:%config(noreplace) %{_sysconfdir}/sock2path.d/%{sock2path}}
 %endif
 
 # ===========================================================================
 %changelog
 # ---------------------------------------------------------------------------
 # $Log: strnsl.spec.in,v $
-# Revision 0.9.2.12  2007/06/20 09:27:50  brian
-# - recognize Fedora 7 kernels
+# Revision 0.9.2.13  2007/06/22 01:52:20  brian
+# - add netconfig installation to strnsl
 #
+
+* Wed Jun 20 2007 Brian Bidulock <bidulock@openss7.org>
+- Revision 0.9.2.12  2007/06/20 09:27:50  brian
+- recognize Fedora 7 kernels
 
 * Sat May 19 2007 Brian Bidulock <bidulock@openss7.org>
 - Revision 0.9.2.11  2007/05/19 02:27:37  brian
